# cameraInferno-maya

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  build_package.bash  build_package.bat
modules/: CMakeLists.txt  cameraInferno.mod  dcCameraInferno.mod
plug-ins/: CMakeLists.txt  dcCameraInferno.py  dcVelocity.py
presets/: CMakeLists.txt
presets/attrPresets/dcCameraInferno/: metric_km_per_hour.mel  metric_km_per_hour_aspect_2_39.mel  metric_miles_per_hour.mel  usa_measurements.mel
python/: CMakeLists.txt
python/dcCameraInferno/: .gitignore  constant.py.in  tool.py
scripts/: AEdcCameraInfernoTemplate.mel  AEdcVelocityTemplate.mel
tests/: test.py
